--- a/private.html
+++ b/private.html
@@ -2145,7 +2145,7 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <dt id="getRandomInt"><a name="getRandomInt,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRandomInt</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">mi</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">ma</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1000000000</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span></pre></dt>
 <dd>
 <p>getRandomInt</p>
-<p>convenience prog so we do not need to import random</p>
+<p>convenience proc so we do not need to import random</p>
 <p>in calling prog</p>
 
 
@@ -2163,7 +2163,7 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <dt id="getRandomFloat"><a name="getRandomFloat,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRandomFloat</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">float</span></pre></dt>
 <dd>
 <p>getRandomFloat</p>
-<p>convenience prog so we do not need to import random</p>
+<p>convenience proc so we do not need to import random</p>
 <p>in calling prog</p>
 
 
@@ -2520,7 +2520,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-12 16:54:52 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-12 18:49:46 UTC</small>
       </div>
     </div>
   </div>
