--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1241,9 +1241,39 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   </ul>
 </li>
 <li>
+  <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#red"
+    title="red* = &quot;red&quot;"><wbr />red</a></li>
+  <li><a class="reference" href="#green"
+    title="green* = &quot;green&quot;"><wbr />green</a></li>
+  <li><a class="reference" href="#cyan"
+    title="cyan* = &quot;cyan&quot;"><wbr />cyan</a></li>
+  <li><a class="reference" href="#yellow"
+    title="yellow* = &quot;yellow&quot;"><wbr />yellow</a></li>
+  <li><a class="reference" href="#white"
+    title="white* = &quot;white&quot;"><wbr />white</a></li>
+  <li><a class="reference" href="#black"
+    title="black* = &quot;black&quot;"><wbr />black</a></li>
+  <li><a class="reference" href="#brightred"
+    title="brightred* = &quot;brightred&quot;"><wbr />brightred</a></li>
+  <li><a class="reference" href="#brightgreen"
+    title="brightgreen* = &quot;brightgreen&quot;"><wbr />brightgreen</a></li>
+  <li><a class="reference" href="#brightcyan"
+    title="brightcyan* = &quot;brightcyan&quot;"><wbr />brightcyan</a></li>
+  <li><a class="reference" href="#brightyellow"
+    title="brightyellow* = &quot;brightyellow&quot;"><wbr />brightyellow</a></li>
+  <li><a class="reference" href="#brightwhite"
+    title="brightwhite* = &quot;brightwhite&quot;"><wbr />brightwhite</a></li>
+
+  </ul>
+</li>
+<li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#timeSeries,T,string"
+      <li><a class="reference" href="#printHl,string,string,string"
+    title="printHl*(sen: string; astr: string; col: string)"><wbr />print<wbr />Hl</a></li>
+  <li><a class="reference" href="#timeSeries,T,string"
     title="timeSeries*[T](self: T; ty: string): Ts"><wbr />time<wbr />Series</a></li>
   <li><a class="reference" href="#showTimeSeries,Ts,string,string,int"
     title="showTimeSeries*(ats: Ts; header, ty: string; N: int)"><wbr />show<wbr />Time<wbr />Series</a></li>
@@ -1371,6 +1401,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="logisticf*(z: float): float"><wbr />logisticf</a></li>
   <li><a class="reference" href="#logisticf_derivative,float"
     title="logisticf_derivative*(z: float): float"><wbr />logisticf_<wbr />derivative</a></li>
+  <li><a class="reference" href="#qqTop,"
+    title="qqTop*()"><wbr />qq<wbr />Top</a></li>
   <li><a class="reference" href="#doFinish,"
     title="doFinish*()"><wbr />do<wbr />Finish</a></li>
 
@@ -1568,9 +1600,80 @@ Currencies type is a simple object to hold current currency data
 </dd>
 
 </dl></div>
+<div class="section" id="10">
+<h1><a class="toc-backref" href="#10">Consts</a></h1>
+<dl class="item">
+<dt id="red"><a name="red"></a><pre><span class="Identifier">red</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;red&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="green"><a name="green"></a><pre><span class="Identifier">green</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;green&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="cyan"><a name="cyan"></a><pre><span class="Identifier">cyan</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;cyan&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="yellow"><a name="yellow"></a><pre><span class="Identifier">yellow</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;yellow&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="white"><a name="white"></a><pre><span class="Identifier">white</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;white&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="black"><a name="black"></a><pre><span class="Identifier">black</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;black&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightred"><a name="brightred"></a><pre><span class="Identifier">brightred</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightred&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightgreen"><a name="brightgreen"></a><pre><span class="Identifier">brightgreen</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightgreen&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightcyan"><a name="brightcyan"></a><pre><span class="Identifier">brightcyan</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightcyan&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightyellow"><a name="brightyellow"></a><pre><span class="Identifier">brightyellow</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightyellow&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+<dt id="brightwhite"><a name="brightwhite"></a><pre><span class="Identifier">brightwhite</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;brightwhite&quot;</span></pre></dt>
+<dd>
+
+
+</dd>
+
+</dl></div>
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
+<dt id="printHl"><a name="printHl,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printHl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">sen</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">astr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printHl</p>
+<p>print and highlight all appearances of a char or substring of a string</p>
+<p>with a certain color</p>
+<pre class = "listing"><span class="Identifier">printHl</span><span class="Punctuation">(</span><span class="StringLit">&quot;HELLO THIS IS A TEST&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;T&quot;</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">)</span></pre><p>this would highlight all T in green</p>
+<p>available colors : green,yellow,cyan,red,white,black,brightgreen,brightwhite</p>
+<blockquote><p>brightred,brightcyan,brightyellow</p></blockquote>
+
+
+</dd>
 <dt id="timeSeries"><a name="timeSeries,T,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">timeSeries</span><span class="Operator">*</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">ty</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Ts</span></pre></dt>
 <dd>
 <p>timeseries returns a Ts type date and one data column based on ty selection input usually is a Stocks object and a string , if a string is in ohlcva the relevant series will be extracted from the Stocks object</p>
@@ -2103,6 +2206,13 @@ head means oldest rows
 
 
 </dd>
+<dt id="qqTop"><a name="qqTop,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">qqTop</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>qqTop</p>
+<p>prints qqTop logo in custom color </p>
+
+
+</dd>
 <dt id="doFinish"><a name="doFinish,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">doFinish</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>doFinish</p>
@@ -2175,7 +2285,7 @@ msggb<pre class = "listing"><span class="Identifier">msggb</span><span class="Pu
 <dd>
 <p>hdx</p>
 <p>hdx is used for headers to make them stand out</p>
-<p>it puts the text between 2 horizontal lines </p>
+<p>it puts the text between 2 horizontal &quot;+&quot; lines </p>
 
 
 </dd>
@@ -2204,7 +2314,7 @@ msggb<pre class = "listing"><span class="Identifier">msggb</span><span class="Pu
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-13 13:20:20 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-13 13:50:42 UTC</small>
       </div>
     </div>
   </div>
