--- a/private.html
+++ b/private.html
@@ -1299,7 +1299,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="printLnBiCol*(s: string; sep: string; colLeft: string = &quot;yellow&quot;;
               colRight: string = &quot;white&quot;)"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col</a></li>
   <li><a class="reference" href="#printHl,string,string,string"
-    title="printHl*(sen: string; astr: string; col: string)"><wbr />print<wbr />Hl</a></li>
+    title="printHl*(s: string; substr: string; col: string)"><wbr />print<wbr />Hl</a></li>
   <li><a class="reference" href="#printStyled,string,string,string,set[Style]"
     title="printStyled*(s: string; substr: string; col: string; astyle: set[Style])"><wbr />print<wbr />Styled</a></li>
   <li><a class="reference" href="#printTuple,"
@@ -1607,7 +1607,7 @@ check execution timing with one line see doFinish
 </dd>
 <dt id="printColStr"><a name="printColStr,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printColStr</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">colstr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">astr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
-
+forward declaration
 
 </dd>
 <dt id="hline"><a name="hline,string,int,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hline</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;_&quot;</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">tw</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">white</span><span class="Other">)</span></pre></dt>
@@ -1844,7 +1844,7 @@ printLnB
 <p>prints a string with a named color in colstr</p>
 <p>colors : green,red,cyan,yellow,white,black</p>
 <blockquote><p>brightgreen,brightred,brightcyan,brightyellow,brightwhite</p></blockquote>
-<pre class = "listing"><span class="Identifier">printColStr</span><span class="Punctuation">(</span><span class="StringLit">&quot;green&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;Nice it is in green&quot;</span><span class="Punctuation">)</span></pre>
+<pre class = "listing"><span class="Identifier">printColStr</span><span class="Punctuation">(</span><span class="Identifier">green</span><span class="Punctuation">,</span><span class="StringLit">&quot;Nice, it is in green !&quot;</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="printLnColStr"><a name="printLnColStr,string,varargs[string,]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnColStr</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">colstr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">mvastr</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">,</span> <span class="Other">`</span><span class="Operator">$</span><span class="Other">`</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
@@ -1890,7 +1890,7 @@ printLnB
 <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="StringLit">&quot;{} : {}     {}&quot;</span><span class="Operator">.</span><span class="Identifier">fmt</span><span class="Punctuation">(</span><span class="StringLit">&quot;Good Idea&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;Number&quot;</span><span class="Punctuation">,</span><span class="DecNumber">50</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="StringLit">&quot;:&quot;</span><span class="Punctuation">,</span><span class="Identifier">yellow</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="printHl"><a name="printHl,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printHl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">sen</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">astr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dt id="printHl"><a name="printHl,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printHl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">substr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printHl</p>
 <p>print and highlight all appearances of a char or substring of a string</p>
@@ -2537,7 +2537,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-13 21:17:10 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-13 21:25:55 UTC</small>
       </div>
     </div>
   </div>
