--- a/private.html
+++ b/private.html
@@ -2082,7 +2082,7 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 <p>the color of the string can be selected, available colors</p>
 <p>green,red,cyan,white,yellow and for going completely bonkers the frame</p>
 <p>can be set to clrainbow too .</p>
-<pre class = "listing"><span class="Keyword">import</span> <span class="Identifier">private</span><span class="Punctuation">,</span><span class="Identifier">terminal</span>
+<pre class = "listing"><span class="Keyword">import</span> <span class="Identifier">private</span>
 
 <span class="Identifier">superheader</span><span class="Punctuation">(</span><span class="StringLit">&quot;Ok That's it for Now !&quot;</span><span class="Punctuation">,</span><span class="Identifier">clrainbow</span><span class="Punctuation">,</span><span class="Identifier">white</span><span class="Punctuation">)</span>
 <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
@@ -2556,7 +2556,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-20 14:01:19 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-20 14:06:10 UTC</small>
       </div>
     </div>
   </div>
