--- a/libFinHk.html
+++ b/libFinHk.html
@@ -53,7 +53,7 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #2d2d2d;
+  color: #666;
   background-color: rgba(252, 248, 244, 0.75); }
 
 /* Skeleton grid */
@@ -1331,7 +1331,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-13 13:50:42 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-22 22:50:36 UTC</small>
       </div>
     </div>
   </div>
