--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1466,7 +1466,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>Tested on   : Linux</p>
 <p>ProjectStart: 2015-06-05</p>
 <dl class="docutils"><dt>ToDo        : Ratios , Covariance , Correlation</dt>
-<dd>improve exception handling if yahoo data fails to be retrieved or is temporary unavailable for certain markets currently programs may crash occasionally if nil data is returned by Yahoo.</dd>
+<dd>improve exception handling if yahoo data fails to be retrieved or is temporary unavailable for certain markets</dd>
 </dl>
 <p>Programming : qqTop</p>
 <p>Contributors: reactorMonk</p>
@@ -2316,7 +2316,7 @@ msggb<pre class = "listing"><span class="Identifier">msggb</span><span class="Pu
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-23 09:53:17 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-23 11:04:02 UTC</small>
       </div>
     </div>
   </div>
