--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1448,14 +1448,14 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <p class="module-desc"><blockquote><p><p>Program     : nimFinLib</p>
 <p>Status      : Development</p>
 <p>License     : MIT opensource</p>
-<p>Version     : 0.2.x</p>
+<p>Version     : 0.2.5</p>
 <p>Compiler    : nim 0.11.3</p>
 <p>Description : A basic library for financial calculations with Nim</p>
 <blockquote><p><p>Yahoo historical stock data</p>
 <p>Yahoo additional stock data</p>
 <p>Yahoo current stock quotes</p>
 <p>Yahoo forex rates</p>
-<p>Dataframe like structure for easy working with historical data and dataseries</p>
+<p>Dataframe like objects for easy working with historical data and dataseries</p>
 <p>Returns calculations</p>
 <p>Ema calculation</p>
 <p>Date manipulations</p>
@@ -2316,7 +2316,7 @@ msggb<pre class = "listing"><span class="Identifier">msggb</span><span class="Pu
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-23 11:04:02 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-23 15:25:02 UTC</small>
       </div>
     </div>
   </div>
