--- a/private.html
+++ b/private.html
@@ -1189,7 +1189,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#PRIVATLIBVERSION"
-    title="PRIVATLIBVERSION* = &quot;0.8.0&quot;"><wbr />PRIVATLIBVERSION</a></li>
+    title="PRIVATLIBVERSION* = &quot;0.8.5&quot;"><wbr />PRIVATLIBVERSION</a></li>
   <li><a class="reference" href="#red"
     title="red* = &quot;red&quot;"><wbr />red</a></li>
   <li><a class="reference" href="#green"
@@ -1284,6 +1284,26 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="printB*(s: string)"><wbr />print<wbr />B</a></li>
   <li><a class="reference" href="#printLnB,string"
     title="printLnB*(s: string)"><wbr />print<wbr />Ln<wbr />B</a></li>
+  <li><a class="reference" href="#printBonG,string"
+    title="printBonG*(astring: string)"><wbr />print<wbr />Bon<wbr />G</a></li>
+  <li><a class="reference" href="#printLnBonG,string"
+    title="printLnBonG*(astring: string)"><wbr />print<wbr />Ln<wbr />Bon<wbr />G</a></li>
+  <li><a class="reference" href="#printBonY,string"
+    title="printBonY*(astring: string)"><wbr />print<wbr />Bon<wbr />Y</a></li>
+  <li><a class="reference" href="#printLnBonY,string"
+    title="printLnBonY*(astring: string)"><wbr />print<wbr />Ln<wbr />Bon<wbr />Y</a></li>
+  <li><a class="reference" href="#printBonR,string"
+    title="printBonR*(astring: string)"><wbr />print<wbr />Bon<wbr />R</a></li>
+  <li><a class="reference" href="#printLnBonR,string"
+    title="printLnBonR*(astring: string)"><wbr />print<wbr />Ln<wbr />Bon<wbr />R</a></li>
+  <li><a class="reference" href="#printWonR,string"
+    title="printWonR*(astring: string)"><wbr />print<wbr />Won<wbr />R</a></li>
+  <li><a class="reference" href="#printLnWonR,string"
+    title="printLnWonR*(astring: string)"><wbr />print<wbr />Ln<wbr />Won<wbr />R</a></li>
+  <li><a class="reference" href="#printWonB,string"
+    title="printWonB*(astring: string)"><wbr />print<wbr />Won<wbr />B</a></li>
+  <li><a class="reference" href="#printLnWonB,string"
+    title="printLnWonB*(astring: string)"><wbr />print<wbr />Ln<wbr />Won<wbr />B</a></li>
   <li><a class="reference" href="#rainbow,string"
     title="rainbow*(astr: string)"><wbr />rainbow</a></li>
   <li><a class="reference" href="#printRainbow,string,set[Style]"
@@ -1449,14 +1469,6 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="msgb*(code: stmt): stmt"><wbr />msgb</a></li>
   <li><a class="reference" href="#msgbb.t,stmt"
     title="msgbb*(code: stmt): stmt"><wbr />msgbb</a></li>
-  <li><a class="reference" href="#msgbgb.t,stmt"
-    title="msgbgb*(code: stmt): stmt"><wbr />msgbgb</a></li>
-  <li><a class="reference" href="#msgbyb.t,stmt"
-    title="msgbyb*(code: stmt): stmt"><wbr />msgbyb</a></li>
-  <li><a class="reference" href="#msgwrb.t,stmt"
-    title="msgwrb*(code: stmt): stmt"><wbr />msgwrb</a></li>
-  <li><a class="reference" href="#msgbwb.t,stmt"
-    title="msgbwb*(code: stmt): stmt"><wbr />msgbwb</a></li>
   <li><a class="reference" href="#hdx.t,stmt"
     title="hdx*(code: stmt): stmt"><wbr />hdx</a></li>
   <li><a class="reference" href="#withFile.t,expr,string,FileMode,stmt"
@@ -1472,7 +1484,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <p class="module-desc"><blockquote><p><p>Library     : private.nim</p>
 <p>Status      : stable</p>
 <p>License     : MIT opensource</p>
-<p>Version     : 0.8.0</p>
+<p>Version     : 0.8.5</p>
 <p>ProjectStart: 2015-06-20</p>
 <p>Compiler    : Nim 0.11.3 dev</p>
 <p>OS          : Linux</p>
@@ -1532,7 +1544,7 @@ check execution timing with one line see doFinish
 <div class="section" id="10">
 <h1><a class="toc-backref" href="#10">Consts</a></h1>
 <dl class="item">
-<dt id="PRIVATLIBVERSION"><a name="PRIVATLIBVERSION"></a><pre><span class="Identifier">PRIVATLIBVERSION</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;0.8.0&quot;</span></pre></dt>
+<dt id="PRIVATLIBVERSION"><a name="PRIVATLIBVERSION"></a><pre><span class="Identifier">PRIVATLIBVERSION</span><span class="Operator">*</span> <span class="Other">=</span> <span class="StringLit">&quot;0.8.5&quot;</span></pre></dt>
 <dd>
 
 
@@ -1606,8 +1618,7 @@ check execution timing with one line see doFinish
 <dd>
 <p>getTerminalWidth</p>
 <p>utility to easily draw correctly sized lines on linux terminals</p>
-<p>and get linux terminal width</p>
-<p>for windows this currently is set to terminalwidth 80 </p>
+<p>and get linux terminal width </p>
 
 
 </dd>
@@ -1825,6 +1836,76 @@ printB
 <dt id="printLnB"><a name="printLnB,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnB</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
 printLnB
+
+</dd>
+<dt id="printBonG"><a name="printBonG,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBonG</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printBonG</p>
+<p>black foregroundcolor on green background </p>
+
+
+</dd>
+<dt id="printLnBonG"><a name="printLnBonG,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBonG</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnBonG</p>
+<p>black foregroundcolor on green background with newline </p>
+
+
+</dd>
+<dt id="printBonY"><a name="printBonY,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBonY</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printBonY</p>
+<p>black foregroundcolor on yellow background </p>
+
+
+</dd>
+<dt id="printLnBonY"><a name="printLnBonY,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBonY</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnBonY</p>
+<p>black foregroundcolor on yellow background with newline </p>
+
+
+</dd>
+<dt id="printBonR"><a name="printBonR,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBonR</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printBonR</p>
+<p>black foregroundcolor on red background </p>
+
+
+</dd>
+<dt id="printLnBonR"><a name="printLnBonR,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBonR</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnBonR</p>
+<p>black foregroundcolor on red background with newline </p>
+
+
+</dd>
+<dt id="printWonR"><a name="printWonR,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printWonR</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printWonR</p>
+<p>white foregroundcolor on red background </p>
+
+
+</dd>
+<dt id="printLnWonR"><a name="printLnWonR,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnWonR</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnWonR</p>
+<p>white foregroundcolor on red background with newline </p>
+
+
+</dd>
+<dt id="printWonB"><a name="printWonB,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printWonB</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printBonR</p>
+<p>white foregroundcolor on black background </p>
+
+
+</dd>
+<dt id="printLnWonB"><a name="printLnWonB,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnWonB</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astring</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
+<dd>
+<p>printLnWonB</p>
+<p>white foregroundcolor on red background with newline </p>
+
 
 </dd>
 <dt id="rainbow"><a name="rainbow,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rainbow</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">astr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
@@ -2488,34 +2569,6 @@ msgX templates convenience templates for colored text output the assumption is t
 
 
 </dd>
-<dt id="msgbgb"><a name="msgbgb.t,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">msgbgb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span></pre></dt>
-<dd>
-<p>msgbgb</p>
-<p>green background , black foregroundcolor </p>
-
-
-</dd>
-<dt id="msgbyb"><a name="msgbyb.t,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">msgbyb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span></pre></dt>
-<dd>
-<p>msgbyb</p>
-<p>yellow background , black foregroundcolor </p>
-
-
-</dd>
-<dt id="msgwrb"><a name="msgwrb.t,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">msgwrb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span></pre></dt>
-<dd>
-<p>msgbgb</p>
-<p>red background , white foregroundcolor </p>
-
-
-</dd>
-<dt id="msgbwb"><a name="msgbwb.t,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">msgbwb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span></pre></dt>
-<dd>
-<p>msgbwb</p>
-<p>white background , black foregroundcolor </p>
-
-
-</dd>
 <dt id="hdx"><a name="hdx.t,stmt"></a><pre><span class="Keyword">template</span> <span class="Identifier">hdx</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">code</span><span class="Other">:</span> <span class="Identifier">stmt</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">stmt</span></pre></dt>
 <dd>
 
@@ -2571,7 +2624,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-28 13:12:55 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-28 13:55:29 UTC</small>
       </div>
     </div>
   </div>
